# sql-query-agent

./: .gitignore  ARCHITECTURE.md  FABRIC_SETUP.md  LICENSE  README.md  TESTING.md  org_config.example.yaml  org_config.poc.example.yaml  org_config.poc.yaml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: clarity_dict_tables.json  clarity_sql_sources.json  dict_columns.json  (+4 more)
docs/: README.md  admin_request_monday.md
libs/: README.md
notebooks/: data_agent_instructions.md  debug_traversal.py  extract_views.py  generate_descriptions_via_agent.py  generate_summaries.py  inspect_extracted_sql.py  load_clarity_dictionary.py  load_sql_files.py  manage_stewards.py  metadata_sync.py  orchestrator.py  orchestrator_v2.py  scan_sql_files.py  setup_poc_tables.py  test_collibra_oauth.py  test_scriptdom_fabric.py  test_sql_extractor.py  test_synapseml.py  update_pbi_descriptions.py  validate_pipeline.py
presentation/: hdaa_full_circle.pptx  hdaa_full_circle_minimal.pptx  hdaa_full_circle_v3.pptx  hdaa_slide_content.md  hdaa_speaker_notes.md
scripts/: detect_dead_code.py  generate_demo_slides.py  generate_hdaa_deck.py  generate_hdaa_minimal.py  run_full_pipeline.py  run_local.py  seed_sample_data.py  test_collibra_connection.py  validate_config.py  validate_dictionary.py
src/: config.py  dictionary.py  models.py  pipeline.py  schemas.py
tests/: test_adapters.py  test_error_classifier.py  test_extractor.py  test_graph_builder.py  test_graph_traversal.py  test_pipeline.py  test_schemas.py  test_sql_extractor.py  test_sql_parser.py
website/: index.html
(+73 files in other folders)
